--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Entrada de terror</title>
 </head>
 <body>
+    <audio id="musicaFondo" autoplay loop>
+  <source src="imagenes/musica.mp3./scary-music-box-165983.mp3" type="audio/mpeg">
+</audio>
    <header>
         <h2>Bienvenido al Mundo del Horror</h2>
         <nav class="menu">
