--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <audio id="musicaFondo" autoplay loop>
-  <source src="imagenes/musica.mp3./scary-music-box-165983.mp3" type="audio/mpeg">
+    <source src="audio/scary-music-box-165983.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio HTML5.
 </audio>
+   
    <header>
         <h2>Bienvenido al Mundo del Horror</h2>
         <nav class="menu">
@@ -36,5 +38,13 @@
             <i class="fas fa-knife"></i> Entrar
         </a>
     </div>
+    <script>
+    window.addEventListener('click', () => {
+        const audio = document.getElementById('musicaFondo');
+        if (audio.paused) {
+            audio.play();
+        }
+    });
+</script>
 </body>
 </html>
