He añadido página de parejas

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="principal.html">Juego principal</a></li>
+                <li><a href="parejas.html">Juego parejas</a></li>
             </ul>
         </nav>
     </header>
@@ -33,8 +35,8 @@
 
     <!-- Contenido principal -->
     <div class="contenido">
-        <h1 class="terror">Bienvenido</h1>
-        <p class="terror">Solo los valientes se atreven a entrar...</p>
+        <h1 class="terror">Bienvenidos</h1>
+        <p class="terror">Solo las parejas más atrevidas pueden entrar...</p>
 
         <!-- Botón de entrada terrorífico -->
         <a href="principal.html" class="boton-miedo">
