--- a/principal.html
+++ b/principal.html
@@ -20,6 +20,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="principal.html">Juego principal</a></li>
+                <li><a href="parejas.html">Juego parejas</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +35,7 @@
         <p class="terror" id="excusa">Pulsa un botón… si te atreves </p>
 
         <div class="botones-tortura">
-            <button type="button" class="boton-miedo" onclick="mostrarTortura()">🔪 Tortura 1</button>
+            <button type="button" class="boton-miedo" onclick="mostrarTortura()">🔪 Tortura </button>
         </div>
     </div>
 
