cambios torturas parejas

--- a/principal.html
+++ b/principal.html
@@ -44,9 +44,9 @@
         const TORTURAS_LIST = [
             'escuchar regueton',
             'explicar memes a tus padres',
-            'hacer bootcamp',
+            'hacer un bootcamp',
             'tirar cera a los ojos',
-            'clavarle cera a los ojos',
+            'dar descargas electricas',
         ];
 
         const PERSONAS_LIST = [
