--- a/principal.html
+++ b/principal.html
@@ -1,135 +1,145 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generador de Torturas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body class="principal">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Creepster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body class="principal">
     <audio id="musicaFondo" autoplay loop>
-  <source src="audio/evil-laugh-multi-34044.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio HTML5.
-</audio>
+      <source src="audio/evil-laugh-multi-34044.mp3" type="audio/mpeg" />
+      Tu navegador no soporta audio HTML5.
+    </audio>
 
     <!-- HEADER -->
     <header>
-        <h2>El rincón del dolor y la risa</h2>
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="principal.html">Juego principal</a></li>
-                <li><a href="parejas.html">Juego parejas</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </ul>
-        </nav>
+      <h2>El rincón del dolor y la risa</h2>
+      <nav class="menu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="principal.html">Juego principal</a></li>
+          <li><a href="parejas.html">Juego parejas</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- VIDEO DE FONDO -->
-    <video id="bg-video" src="imagenes/velas.mp4" autoplay muted loop playsinline></video>
+    <video
+      id="bg-video"
+      src="imagenes/velas.mp4"
+      autoplay
+      muted
+      loop
+      playsinline
+    ></video>
 
     <!-- CONTENIDO PRINCIPAL -->
     <div class="contenido" id="generador">
-        <h1 class="terror">Generador de Torturas Graciosas</h1>
-        <p class="terror" id="excusa">Pulsa un botón… si te atreves </p>
+      <h1 class="terror">Generador de Torturas Graciosas</h1>
+      <p class="terror" id="excusa">Pulsa un botón… si te atreves</p>
 
-        <div class="botones-tortura">
-            <button type="button" class="boton-miedo" onclick="mostrarTortura()">🔪 Tortura </button>
-        </div>
+      <div class="botones-tortura">
+        <button type="button" class="boton-miedo" onclick="mostrarTortura()">
+          🔪 Tortura
+        </button>
+      </div>
     </div>
 
     <!-- GENERADOR -->
     <script>
-        const TORTURAS_LIST = [
-            'escuchar regueton',
-            'explicar memes a tus padres',
-            'hacer un bootcamp',
-            'tirar cera a los ojos',
-            'dar descargas electricas',
-        ];
+      const TORTURAS_LIST = [
+        "escuchar reguetón",
+        "explicar memes a tus padres",
+        "hacer un bootcamp sin dormir",
+        "recibir cera caliente en los ojos",
+        "recibir descargas eléctricas",
+      ];
 
-        const PERSONAS_LIST = [
-            'tu suegra',
-            'un payaso siniestro',
-            'tu ex',
-            'un vendedor de seguros',
-            'politico corrupto (por defecto de derechas)',
-        ];
+      const PERSONAS_LIST = [
+        "tu suegra",
+        "un payaso siniestro",
+        "tu ex",
+        "un vendedor de seguros",
+        "un político corrupto",
+      ];
 
-        const TOOLS_LIST = [
-            'un microscopio',
-            'un altavoz gigante',
-            'agujas',
-            'martillo',
-            'un ordenador lento',
-        ];
+      const TOOLS_LIST = [
+        "un microscopio",
+        "un altavoz gigante",
+        "agujas",
+        "un martillo",
+        "un ordenador lento",
+      ];
 
-        const PARTS_LIST = [
-            'oidos',
-            'genitales',
-            'ojos',
-            'yemas de los dedos',
-            'la dignidad',
-        ];
+      const PARTS_LIST = [
+        "tus oídos",
+        "tus genitales",
+        "tus ojos",
+        "las yemas de tus dedos",
+        "tu dignidad",
+      ];
 
-        const TIME_LIST = [
-            '5 minutos',
-            'una hora',
-            'toda la noche',
-            '24 horas',
-            'toda una vida',
-        ];
+      const TIME_LIST = [
+        "5 minutos",
+        "una hora",
+        "toda la noche",
+        "24 horas",
+        "toda una vida",
+      ];
 
-        const getIsPersona = () => {
-            const index = Math.floor(Math.random() * PERSONAS_LIST.length);
-            return PERSONAS_LIST[index];
-        };
+      const getIsPersona = () => {
+        const index = Math.floor(Math.random() * PERSONAS_LIST.length);
+        return PERSONAS_LIST[index];
+      };
 
-        const getTools = () => {  
-            const index = Math.floor(Math.random() * TOOLS_LIST.length);
-            return TOOLS_LIST[index];
-        };
+      const getTools = () => {
+        const index = Math.floor(Math.random() * TOOLS_LIST.length);
+        return TOOLS_LIST[index];
+      };
 
-        const getPart = () => {
-            const index = Math.floor(Math.random() * PARTS_LIST.length);
-            return PARTS_LIST[index];
-        };
+      const getPart = () => {
+        const index = Math.floor(Math.random() * PARTS_LIST.length);
+        return PARTS_LIST[index];
+      };
 
-        const getTime = () => {
-            const index = Math.floor(Math.random() * TIME_LIST.length);
-            return TIME_LIST[index];
-        };
+      const getTime = () => {
+        const index = Math.floor(Math.random() * TIME_LIST.length);
+        return TIME_LIST[index];
+      };
 
-        const getTortura = () => {
-            const index = Math.floor(Math.random() * TORTURAS_LIST.length);
-            return TORTURAS_LIST[index];
-        };
+      const getTortura = () => {
+        const index = Math.floor(Math.random() * TORTURAS_LIST.length);
+        return TORTURAS_LIST[index];
+      };
 
-        const torturar = () => {
-            const IsPersona = getIsPersona();
-            const Tolls = getTools();  
-            const part = getPart();
-            const time = getTime();
-            const tortura = getTortura();
-            
-            return `Te va a torturar ${IsPersona} con ${Tolls} en ${part} durante ${time} obligándote a: ${tortura}`;
-        };
+      const torturar = () => {
+        const IsPersona = getIsPersona();
+        const Tolls = getTools();
+        const part = getPart();
+        const time = getTime();
+        const tortura = getTortura();
 
-        
-        function mostrarTortura() {
-            const texto = torturar();
-            document.getElementById("excusa").textContent = texto;
+        // Frase con mejor fluidez y concordancia
+        return `Te va a torturar ${IsPersona} con ${Tolls}, apuntando a ${part}, durante ${time}, obligándote a ${tortura}.`;
+      };
+
+      function mostrarTortura() {
+        const texto = torturar();
+        document.getElementById("excusa").textContent = texto;
+      }
+
+      window.addEventListener("click", () => {
+        const audio = document.getElementById("musicaFondo");
+        if (audio && audio.paused) {
+          audio.play();
         }
-
-        window.addEventListener('click', () => {
-    const audio = document.getElementById('musicaFondo');
-    if (audio && audio.paused) {
-      audio.play();
-    }
-  });
-  
-  
+      });
     </script>
-</body>
+  </body>
 </html>
