modificación frases de tortura

--- a/principal.html
+++ b/principal.html
@@ -44,8 +44,8 @@
         const TORTURAS_LIST = [
             'escuchar regueton',
             'explicar memes a tus padres',
-            'hacer un bootcamp',
-            'tirar cera a los ojos',
+            'darle la razón',
+            'darle todos tus ahorros',
             'dar descargas electricas',
         ];
 
@@ -53,24 +53,24 @@
             'tu suegra',
             'un payaso siniestro',
             'tu ex',
-            'un vendedor de seguros',
-            'politico corrupto (por defecto de derechas)',
+            'Tu vecino(a)',
+            'un politico corrupto (por defecto de derechas)',
         ];
 
         const TOOLS_LIST = [
-            'un microscopio',
-            'un altavoz gigante',
-            'agujas',
-            'martillo',
-            'un ordenador lento',
+            'un martillo',
+            'unas tijeras oxidadas',
+            'polvos picapica',
+            'un trozo de hielo',
+            'pinzas para ropa',
         ];
 
         const PARTS_LIST = [
-            'oidos',
-            'genitales',
-            'ojos',
-            'yemas de los dedos',
-            'la dignidad',
+            'la parte baja de la espalda 🍑',
+            'tus partes nobles',
+            'los ojos',
+            'la planta de los pies',
+            'los pezones',
         ];
 
         const TIME_LIST = [
@@ -113,7 +113,7 @@
             const time = getTime();
             const tortura = getTortura();
             
-            return `Te va a torturar ${IsPersona} con ${Tolls} en ${part} durante ${time} obligándote a: ${tortura}`;
+            return `Te torturará ${IsPersona} con ${Tolls} en ${part} durante ${time} obligándote a ${tortura}`;
         };
 
         
