--- a/parejas.html
+++ b/parejas.html
@@ -44,10 +44,10 @@
     <!-- GENERADOR TORTURAS PARA PAREJAS  -->
     <script>
 
-        const ACTION_LIST = ['pellizcará', 'morderá', 'lamerá', 'frotará'];
-        const BODYPART_LIST = ['la oreja', 'los pezones', 'el cuello', 'la ingle'];
-        const WHAT_LIST = ['una pluma', 'una pinza de ropa', 'un hielo', 'una bolsa de te caliente'];
-        const TIME_LIST = ['2', '3', '4', '5'];
+        const ACTION_LIST = ['pellizcará', 'morderá', 'lamerá', 'frotará', 'hurgará'];
+        const BODYPART_LIST = ['la oreja', 'los pezones', 'la planta de los pies', 'la ingle', 'el cuello'];
+        const WHAT_LIST = ['una pluma', 'una pinza de ropa', 'un hielo', 'una cucharilla fria', 'un palillo de dientes'];
+        const TIME_LIST = ['2', '3', '4', '5', '10'];
 
 
 
@@ -57,6 +57,7 @@
         }
 
         const getRandomBodypart = () => {
+
             const index = Math.floor(Math.random() * BODYPART_LIST.length);
             return BODYPART_LIST[index];
         }
