--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 
 <body class="about">
 
-    <audio id="musicaFondo" autoplay loop>
-  <source src="audio/scary-music-box-165983.mp3" type="audio/mpeg">
-  Tu navegador no soporta audio HTML5.
-</audio>
+  <audio id="musicaFondo" autoplay loop>
+        <source src="audio/suspense-terror.mp3" type="audio/mpeg">
+        
+    </audio>
     <!-- HEADER -->
     <header>
         <h2>Bienvenido a la Oscuridad</h2>
