--- a/parejas.html
+++ b/parejas.html
@@ -11,8 +11,8 @@
 
 <body class="principal">
     <audio id="musicaFondo" autoplay loop>
-        <source src="audio/audio_terror.mp3" type="audio/mpeg">
-        Tu navegador no soporta audio HTML5.
+        <source src="audio/scary-halloween-horror-music-421077.mp3" type="audio/mpeg">
+        
     </audio>
 
     <!-- HEADER -->
