--- a/index.html
+++ b/index.html
@@ -43,13 +43,7 @@
             <i class="fas fa-knife"></i> Entrar
         </a>
     </div>
-    <script>
-    window.addEventListener('click', () => {
-        const audio = document.getElementById('musicaFondo');
-        if (audio.paused) {
-            audio.play();
-        }
-    });
-</script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
